test/deprecated/IO/specailWritersReturnErrorMessage/wrbWriteBytes.good
wrbWriteBytes.chpl:4: error: illegal use of return value from 'writeBytes'. Note: if you wish to detect early EOF from a write call, check for an EofError using a try-catch block
